--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@fontsource/open-sans": "^5.0.22",
+    "@reduxjs/toolkit": "^2.2.1",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
-    "redux-logger": "^3.0.6",
     "reselect": "^5.1.0",
     "styled-components": "^6.1.8"
   },
