--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.6",
+    "dotenv": "^16.4.5",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
     "reselect": "^5.1.0",
+    "stripe": "^14.19.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
