--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/open-sans": "^5.0.22",
+    "@netlify/functions": "^2.6.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.6",
